# ROS_img_extract

./: CMakeLists.txt  README.md  package.xml
include/ros_img_extractor/: image_extractor.h
launch/: extract_img.launch  extract_img_pose.launch  extract_img_sync.launch  extract_img_sync_pose.launch
src/: bag_img_extractor.cpp  bag_img_pose_extractor.cpp  bag_img_sync_extractor.cpp  bag_img_sync_pose_extractor.cpp
