<?xml version="1.0"?>
<package>
  <name>ros_img_extractor</name>
  <version>0.0.0</version>
  <description>The ros_img_extractor package</description>

  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <license>Modified BSD</license>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>
